clusters/cluster0/kubernetes/apps/media/romm/app/romm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: romm
  name: romm
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      nodeSelector:
        kubernetes.io/hostname: control-00
      containers:
        - image: rommapp/romm:latest
          imagePullPolicy: Always
          name: romm
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: resources
              mountPath: /romm/resources
            - name: redis
              mountPath: /redis-data
            - name: assets
              mountPath: /romm/assets
            - name: library
              mountPath: /romm/library
              subPath: tank/media/games
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: "2"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: romm-resources-ceph
        - name: redis
          persistentVolumeClaim:
            claimName: romm-redis-ceph
        - name: assets
          persistentVolumeClaim:
            claimName: romm-assets-ceph
        - name: library
          persistentVolumeClaim:
            claimName: media-pvc
