clusters/cluster0/kubernetes/apps/media/romm/app/romm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: romm
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
