clusters/cluster0/kubernetes/apps/media/romm/app/romm-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm
  namespace: media
spec:
  hostnames:
  - romm.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: romm-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
